--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 .header{
    min-height: 117vh; 
    width: 100%;
-   background:linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),  url(img/background.jpg) no-repeat ;
+   background:linear-gradient(rgba(4,9,30,0.7),rgba(5, 49, 228, 0.7)),  url(alyma/IMG-20241210-WA0088.jpg) no-repeat ;
    background-position: center;
    background-size: cover;
    position: relative;
@@ -80,7 +80,7 @@ text_box p{
 nav .fa{
     display: none;
 }
-@media( max-width: 700px){
+@media( max-width: 800px){
     .text_box h1{
         font-size: 20px;
     }
@@ -88,27 +88,33 @@ nav .fa{
         display: block;
     }
     .nav_links{
-        position: absolute;
-        background: #f44336;
-        height: 100vh;
-        width: 320px;
+        float: right;
+        background: hsl(4, 74%, 46%);
+        height: 56vh;
+        width: 138px;
         top: 0;
-        right: -200px;
+        right: -400px;
         text-align: left;
         z-index: 2;
         transition: 1s;
     }
-    nav .fa{
-        display: block;
-        color: #fff;
-        margin: 10px;
-        font-size: 22px;
-        cursor: pointer;
+.nav_links .bx {
+    position: absolute;
+    display: block;
+    color: #fff;
+    margin: 10px;
+    font-size: 32px;
+    cursor: pointer;
+    top: 20px;
+    right: 20px;
+    z-index: 3;
+}
+    
     }
     .nav_links ul{
         padding: 30px;
     }
-}
+
 
 .Activity{
     width: 80%;
